--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,43 @@
 [project]
 name = "swarmkeeper"
 version = "0.1.0"
-description = "Add your description here"
+description = "Manage and observe coding agent sessions using tmux and LLM analysis"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "openai>=2.15.0",
     "pydantic>=2.12.5",
 ]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.0.0",
+    "ruff>=0.3.0",
+]
+
+[project.scripts]
+swarmkeeper = "swarmkeeper.__main__:main"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["swarmkeeper"]
+
+[tool.ruff]
+line-length = 100
+target-version = "py312"
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "N", "W", "UP"]
+ignore = []
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
