--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "openai>=2.15.0",
+    "plyer>=2.1.0",
     "pydantic>=2.12.5",
 ]
 
